# pkg-upgrade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  pkg_upgrade-1.2.0-py3-none-any.whl  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  formula-bump.yml  release.yml  scoop-bump.yml
Formula/: mac-upgrade.rb  pkg-upgrade.rb
docs/: CONTRIBUTING.md
docs/superpowers/plans/: 2026-04-12-install-sh.md  2026-04-12-mac-upgrade.md  2026-04-12-semantic-release-and-full-ci.md  2026-04-13-pkg-upgrade-distribution.md  2026-04-13-pkg-upgrade-foundation.md  2026-04-13-pkg-upgrade-managers.md  2026-04-13-shell-completion.md  2026-04-13-terminal-ui-rewrite.md  2026-04-13-tui-btop-redesign.md
docs/superpowers/specs/: 2026-04-12-install-sh-design.md  2026-04-12-mac-upgrade-design.md  2026-04-12-onboarding-config-design.md  2026-04-12-semantic-release-and-full-ci-design.md  2026-04-13-pkg-upgrade-cross-platform-design.md  2026-04-13-shell-completion-design.md  2026-04-13-tui-btop-redesign-design.md
scoop/: pkg-upgrade.json
src/mac_upgrade/: _brew_cache.py  _subprocess.py  app.py  cli.py  config.py  executor.py  manager.py  models.py  notifier.py  onboarding.py  status.py  widgets.py
src/mac_upgrade/managers/: __init__.py  brew.py  cask.py  gem.py  npm.py  pip.py  system.py
src/pkg_upgrade/: _brew_cache.py  _subprocess.py  app.py  cli.py  completion.py  config.py  declarative.py  errors.py  executor.py  manager.py  notifier.py  onboarding.py  platform.py  registry.py  self_update.py  widgets.py
src/pkg_upgrade/completions/: _pkg-upgrade  pkg-upgrade.bash  pkg-upgrade.fish  pkg-upgrade.ps1
src/pkg_upgrade/managers/: __init__.py  brew.py  cask.py  gem.py  npm.py  pip.py  system.py
src/pkg_upgrade/managers/declarative/: apt.yaml  choco.yaml  dnf.yaml  flatpak.yaml  mas.yaml  pacman.yaml  scoop.yaml  snap.yaml  winget.yaml
src/pkg_upgrade/parsers/: __init__.py  apt.py  choco.py  dnf.py  flatpak.py  generic.py  mas.py  pacman.py  scoop.py  snap.py  winget.py
src/pkg_upgrade/ui/: __init__.py  _glyphs.py  _input.py  _model.py  plain_dashboard.py  rich_dashboard.py  rich_onboarding.py
tests/: _ui_fakes.py  conftest.py  test_cli.py  test_completion.py  test_completion_shells.py  test_config.py  test_cross_os_discovery.py  test_declarative.py  test_declarative_gating.py  test_executor.py  test_installer_completion.py  test_installers.py  test_manager.py  test_manifests.py  test_models.py  test_notifier.py  test_onboarding.py  test_parsers_presets.py  test_plain_dashboard.py  test_platform.py  test_registry.py  test_rich_dashboard_frame.py  test_rich_dashboard_input.py  test_rich_onboarding.py  test_self_update.py  test_subprocess.py  test_ui_contract.py  test_ui_glyphs.py  test_ui_input.py  test_ui_model.py
tests/fixtures/parsers/: apt.txt  choco.txt  dnf.txt  flatpak.txt  mas.txt  pacman.txt  scoop.txt  snap.txt  winget.txt
tests/fixtures/rich_ui/: all_done.txt  awaiting_confirm.txt  expanded.txt  failed.txt  filter_br.txt  mixed.txt
tests/test_managers/: test_brew.py  test_cask.py  test_gem.py  test_npm.py  test_pip.py  test_system.py
tests/test_parsers/: test_generic.py
