[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkg-upgrade"
version = "1.5.0"
description = "A cross-platform TUI that upgrades every package manager on your system"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lukasz Lis" }]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7",
    "readchar>=4.0",
    "PyYAML>=6.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/liskeee/pkg-upgrade"
Repository = "https://github.com/liskeee/pkg-upgrade"

[project.scripts]
pkg-upgrade = "pkg_upgrade.cli:main"
pkgup = "pkg_upgrade.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pre-commit>=3.8",
    "build>=1.2",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/pkg_upgrade"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "ANN",             # flake8-annotations
    "PL",              # pylint subset
    "PTH",             # pathlib
    "ASYNC",           # async pitfalls
    "C4",              # comprehensions
    "RET",             # return
    "TID",             # tidy imports
]
ignore = [
    "ANN401",   # Allow `Any` where deliberate
    "PLR0913",  # Too many arguments (CLI constructors)
    "PLR2004",  # Magic value comparisons (pragmatic)
    "E501",     # Line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["pkg_upgrade"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.hatch.build.targets.wheel]
packages = ["src/pkg_upgrade"]
